Modify frontend-rollout